- All charred food has the worst nutrition value to compensate for having the longest perish timer
- Dried fruit rehydrates in meals via cookedStack property
- Carrot can be added to fruit bread/muffins, similar to pumpkin
- All sauces are not drinkable; for food use only
- Compote buffed; requires more ingredients
- Hardtack & pemmican can be added to soup/stews
- Egg boiling simmering recipes' meltingDuration cut from 100 seconds to 10 - DONE!!!
- Lard simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
- Broth simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
- Ancient Tools' simmering recipes' meltingDuration updated to match other recipes - DONE!!!
- Gelatin simmering recipes' meltingDuration cut from 450 seconds to 48 - DONE!!!
- Acorn coffee simmering recipe's meltingDuration cut from 110 seconds to 24 - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
- WHY ARE FRIED BALLS DOING IT TOO????
- Peanut butter fixed so it gives nutrients when in bowl/bucket
- Acorn muffin recipe fixed so it stops crashing in handbook
- Apple syrup textures working in fruit bread/muffins - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed
- FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
- WHYYYYY IS SALAD DRESSING NOT WORKING IN MEALS??????????????????????
- use the new 'NutritionPropertiesPerLitreInMeal' stuff
- Healing over time implemented for all items
- Soulstorm Brew makes you psychedelic now?